@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2005-10-08 Michal Čihař  <michal@cihar.com>
+    * libraries/display_export.lib.php: Use same formatting for all options.
+
 2005-10-07 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/check_user_privileges.lib.php: bug #1313821, dbname containing a 
       hyphen was not detected as being already created
